--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">s
   
   <title>Frontend Mentor | Mortgage repayment calculator</title>
 
@@ -15,43 +16,39 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="d-flex col-12">
+          <h1></h1>
+          <p></p>
+          <form action="">
+            <label for="" class="form-label"></label>
+            <input type="text" class="form-label">
+            <label for="" class="form-label"></label>
+            <input type="text" class="form-label">
+            <label for="" class="form-label"></label>
+            <input type="text" class="form-label">
 
-  Mortgage Calculator
-  Clear All
+            <label for="pago" class="form-label"></label>
+            <input type="radio" name="pagoeinteres" class="form-label" id="pago">
+            <input type="radio" name="pagoeinteres" class="form-label" id="interes">
 
-  Mortgage Amount
+            <button type="button"></button>
+          </form>
+        </div>
+        <div>
+          <h2></h2>
+          <p></p>
+          <div>
 
-  Mortgage Term
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  Interest Rate
-
-  Mortgage Type
-  Repayment
-  Interest Only
-
-  Calculate Repayments
-
-  <!-- Empty results start -->
-
-  Results shown here
-
-  Complete the form and click “calculate repayments” to see what 
-  your monthly repayments would be.
-
-  <!-- Empty results end -->
-
-  <!-- Completed results start -->
-
-  Your results
-
-  Your results are shown below based on the information you provided. 
-  To adjust the results, edit the form and click “calculate repayments” again.
-
-  Your monthly repayments
-
-  Total you'll repay over the term
-
-  <!-- Completed results end -->
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
