--- a/index.html
+++ b/index.html
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">s
-  
-  <title>Frontend Mentor | Mortgage repayment calculator</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Mortgage repayment calculator</title>
 </head>
+
 <body>
-  <div class="container">
+  <div class="container d-flex">
     <div class="row">
       <div class="col">
-        <div class="d-flex col-12">
-          <h1></h1>
-          <p></p>
-          <form action="">
-            <label for="" class="form-label"></label>
-            <input type="text" class="form-label">
-            <label for="" class="form-label"></label>
-            <input type="text" class="form-label">
-            <label for="" class="form-label"></label>
-            <input type="text" class="form-label">
-
-            <label for="pago" class="form-label"></label>
-            <input type="radio" name="pagoeinteres" class="form-label" id="pago">
-            <input type="radio" name="pagoeinteres" class="form-label" id="interes">
-
-            <button type="button"></button>
-          </form>
+        <div class="">
+          <div class="col-12 ">
+            <h1 class="mt-4">Mortgage Calculator</h1>
+            <button type="button" class="btn btn-link text-secondary mb-5 ">Link</button>
+          </div>
+          <div>
+            <form action="">
+              <div>
+                <label for="monto" class="form-label">Mortgage Amount</label>
+                <div class="input-group mb-3">
+                  <span class="input-group-text">$</span>
+                  <input id="monto" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                </div>
+                <div class="form-text d-none" id="basic-addon1">This field is required
+                </div>
+              </div>
+              <div>
+                <label for="years" class="form-label">Mortgage Term</label>
+                <div class="input-group mb-3">
+                  <input id="years" type="number" class="form-control" aria-label="years">
+                  <span class="input-group-text">years</span>
+                </div>
+                <div class="form-text d-none" id="basic-addon1">This field is required
+                </div>
+              </div>
+              <div>
+                <label for="porcent" class="form-label">Mortgage Rate</label>
+                <div class="input-group mb-3">
+                  <input id="porcent" type="number" class="form-control" aria-label="porcent">
+                  <span class="input-group-text">%</span>
+                </div>
+                <div class="form-text d-none" id="basic-addon1">This field is required
+                </div>
+              </div>
+              
+              <button type="button"></button>
+            </form>
+          </div>
         </div>
         <div>
           <h2></h2>
@@ -48,11 +67,12 @@
     </div>
   </div>
 
-  
-  
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
+    Coded by <a href="#">Gustavo Lastra</a>.
   </div>
 </body>
+
 </html>
