--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class="">
           <div class="col-12 ">
             <h1 class="mt-4">Mortgage Calculator</h1>
-            <button type="button" class="btn btn-link text-secondary mb-5 ">Link</button>
+            <button type="button" class="btn btn-link mb-5 ">Clear All</button>
           </div>
           <div>
             <form action="">
               <div>
                 <label for="monto" class="form-label">Mortgage Amount</label>
-                <div class="input-group mb-3">
+                <div class="input-group mb-3 border border-secondary rounded">
                   <span class="input-group-text">$</span>
                   <input id="monto" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                 </div>
@@ -35,7 +35,7 @@
               </div>
               <div>
                 <label for="years" class="form-label">Mortgage Term</label>
-                <div class="input-group mb-3">
+                <div class="input-group mb-3 border border-secondary rounded">
                   <input id="years" type="number" class="form-control" aria-label="years">
                   <span class="input-group-text">years</span>
                 </div>
@@ -44,15 +44,29 @@
               </div>
               <div>
                 <label for="porcent" class="form-label">Mortgage Rate</label>
-                <div class="input-group mb-3">
+                <div class="input-group mb-3 border border-secondary rounded">
                   <input id="porcent" type="number" class="form-control" aria-label="porcent">
                   <span class="input-group-text">%</span>
                 </div>
                 <div class="form-text d-none" id="basic-addon1">This field is required
                 </div>
               </div>
-              
-              <button type="button"></button>
+              <div class="">
+                <p>Mortgage Type</p>
+                <div class="form-check border border-secondary border-2 py-2 mb-2 rounded">
+                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                  <label class="form-check-label" for="flexRadioDefault1">
+                    Repayment
+                  </label>
+                </div>
+                <div class="form-check border border-secondary border-2 border- py-2 rounded">
+                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                  <label class="form-check-labe" for="flexRadioDefault2">
+                    Interest Only
+                  </label>
+                </div>
+              </div>
+              <button type="button">Calculate Repayments</button>
             </form>
           </div>
         </div>
