--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style/main.css">
 
   <title>Frontend Mentor | Mortgage repayment calculator</title>
 </head>
@@ -30,7 +31,7 @@
                   <span class="input-group-text">$</span>
                   <input id="monto" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                 </div>
-                <div class="form-text d-none" id="basic-addon1">This field is required
+                <div class="form-text text-danger d-none" id="basic-addon1"><p>This field is required</p>
                 </div>
               </div>
               <div>
@@ -39,7 +40,7 @@
                   <input id="years" type="number" class="form-control" aria-label="years">
                   <span class="input-group-text">years</span>
                 </div>
-                <div class="form-text d-none" id="basic-addon1">This field is required
+                <div class="form-text text-danger d-none" id="basic-addon2"><p>This field is required</p>
                 </div>
               </div>
               <div>
@@ -48,7 +49,7 @@
                   <input id="porcent" type="number" class="form-control" aria-label="porcent">
                   <span class="input-group-text">%</span>
                 </div>
-                <div class="form-text d-none" id="basic-addon1">This field is required
+                <div class="form-text text-danger d-none" id="basic-addon3"><p>This field is required</p>
                 </div>
               </div>
               <div class="">
@@ -59,24 +60,49 @@
                     Repayment
                   </label>
                 </div>
-                <div class="form-check border border-secondary border-2 border- py-2 rounded">
+                <div class="form-check border border-secondary border-2 border- py-2 rounded mb-2">
                   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
                   <label class="form-check-labe" for="flexRadioDefault2">
                     Interest Only
                   </label>
                 </div>
+                <div class="form-text text-danger none" id="basic-addon4"><p>This field is required</p>
+                </div>
               </div>
-              <button type="button">Calculate Repayments</button>
+              <div class="d-grid gap-2 mb-4">
+                <button id="buttonCalculator" class="btn rounded-pill fw-bold" type="button"><img src="./assets/images/icon-calculator.svg" alt="">
+                  Calculate Repayments</button>
+              </div>
             </form>
           </div>
         </div>
-        <div>
-          <h2></h2>
-          <p></p>
-          <div>
+        
+        </div>
+        <div id="contentGeneralModal" class="">
+          <div class="text-start text-white pt-4 ps-2">
+            <h2>Your results</h2>
+          <div class="modal-body mb-3">
+            <p>Your results are shown below based on the information you provided. To adjust the results, edit the form
+              and click "calculate repayments" again.</p>
+          </div>
+          </div>
+          <div id="contentResult" class="border  border-5 border-bottom-0 border-start-0 border-end-0 py-3 mb-5 me-2 mx-2 rounded ps-3">
+            <form action="">
+              <div class="mb-3">
+                <label class="text-white" for="">Your monthly repayments</label>
+                <input class="border border-0 " type="text" disabled>
+
+              </div>
+              <div class="text-white">
+                <label for="">Your monthly repayments</label>
+                <input class="border border-0" type="text" disabled>
+
+              </div>
+
+            </form>
 
           </div>
-        </div>
+
       </div>
     </div>
   </div>
