--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             <button type="button" class="btn btn-link mb-5 text-black-50" id="clearButton">Clear All</button>
           </div>
           <form action="" id="mortgageForm">
-            <div>
+            <div class="enfoque">
               <label for="monto" class="form-label">Mortgage Amount</label>
-              <div class="input-group mb-3 border border-secondary rounded">
-                <span class="input-group-text">$</span>
-                <input id="monto" type="text" class="form-control shadow-none border-0" aria-label="Amount">
+              <div class="input-group mb-3 border border-secondary rounded flex-row-reverse">
+                <input id="monto" type="number" class="form-control shadow-none border-0" aria-label="Amount">
+                <span id="spanUno" class="input-group-text">$</span>
               </div>
               <div class="form-text text-danger d-none" id="errorMonto">
                 <p>This field is required</p>
               </div>
             </div>
-            <div>
+            <div class="enfoque">
               <label for="years" class="form-label">Mortgage Term</label>
               <div class="input-group mb-3 border border-secondary rounded">
                 <input id="years" type="number" class="form-control shadow-none border-0" aria-label="Years">
@@ -45,7 +45,7 @@
                 <p>This field is required</p>
               </div>
             </div>
-            <div>
+            <div class="enfoque">
               <label for="porcent" class="form-label">Mortgage Rate</label>
               <div class="input-group mb-3 border border-secondary rounded">
                 <input id="porcent" type="number" class="form-control shadow-none border-0" aria-label="Rate">
